# devops-bootcamp

./: .cspell.json  .gitignore  .markdownlint.json  .spelling  CLAUDE.md  Dockerfile  LICENSE  README.md  STYLE.md  _sidebar.md  catalog-info.yaml  contributors.md  docker-compose.yaml  index.html  package-lock.json  package.json  renovate.json  webpack.common.js  webpack.dev.js  webpack.prod.js
.claude/: settings.local.json
.husky/: front-matter-condenser.js  pre-commit
1-introduction/: 1.0-overview.md  1.1-devops-defined.md  1.2-liatrio-and-devops.md  1.2.1-dojo.md  1.3.1-unix.md  1.3.3-installations.md  1.3.4-passwords-and-keys.md  1.3.5-networking.md  1.4-external-resources.md
2-Github/: 2.0-overview.md  2.1-features.md  2.2-Actions.md  2.3-Projects.md  2.4-APIs.md  2.5-Security.md
2-virtual-machines-containers/: 2.0-overview.md  2.1-golden-images.md  2.2-local-development.md  2.3-managing-infrastructure.md  2.4-containers.md  2.5.1-docker-compose.md  2.5.2-kubernetes.md
3-cloud-computing/: 3.0-overview.md  3.0.1-Cloud Service Ecosystems.md  3.0.1-Cloud-Ecosystems.md  3.1-cloud.md  3.1.1-aws.md  3.1.2-azure.md  3.2-overview.md  3.2.1-s3-cloudfront.md  3.2.2-ec2.md  3.2.3-auto-scaling.md  3.2.4-aws-packer.md  3.2.5-lambda.md  3.2.6-ecs.md  3.2.7-eks.md  3.3-overview.md  3.3.1-storage-accounts.md  3.3.3-vmss.md  3.3.4-az-packer.md  3.3.6-aks.md
3-virtual-machines-containers/: 3.5-container-management.md  packer.md
3.5.1/: exercise_one.go
4-cloud-computing/: 4.0-overview.md  4.0.1-Cloud-Ecosystems.md  4.2-overview.md  4.2.4-aws-packer.md  4.3.4-az-packer.md
4-software-development-practices/: 4.1-overview.md  (+17 more)
examples/ch11/solid-exercises/exercise-2-ocp/: README.md  discount_calculator.py  main.py  pyproject.toml
examples/ch11/solid-exercises/exercise-2-ocp/tests/: __init__.py  test_discount_calculator.py
examples/ch6/pre-commit-flask/: README.md  pyproject.toml
examples/ch6/pre-commit-flask/src/: __init__.py  app.py
examples/ch6/pre-commit-flask/tests/: test_app.py
(+924 files in other folders)
