[project]
name = "exercise-2-ocp"
version = "0.1.0"
description = "Exercise 2: Open/Closed Principle - A DiscountCalculator with if/elif chains to refactor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
